fixed alignment of columns in table

--- a/wbdv-sp21-01-arielle-slatus-client-react/src/course-list.template.client.css
+++ b/wbdv-sp21-01-arielle-slatus-client-react/src/course-list.template.client.css
@@ -42,6 +42,11 @@
     padding-right: 10px;
 }
 
+.ats-card-icon-spacing {
+    padding-right: 10px;
+    padding-top: 10px;
+}
+
 .ats-table {
     height: 100%
 }
