--- a/wbdv-sp21-01-arielle-slatus-client-react/src/style.css
+++ b/wbdv-sp21-01-arielle-slatus-client-react/src/style.css
@@ -47,7 +47,9 @@
     vertical-align: middle;
 }
 
-
+.ats-align-center-horizontal {
+    margin: 0 auto;
+}
 
 
 
